load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "k8s.io/client-go/examples/workqueue",
    visibility = ["//visibility:private"],
    deps = [
        "//kubernetes:go_default_library",
        "//tools/cache:go_default_library",
        "//tools/clientcmd:go_default_library",
        "//util/workqueue:go_default_library",
        "@io_k8s_api//core/v1:go_default_library",
        "@io_k8s_apimachinery//pkg/apis/meta/v1:go_default_library",
        "@io_k8s_apimachinery//pkg/fields:go_default_library",
        "@io_k8s_apimachinery//pkg/util/runtime:go_default_library",
        "@io_k8s_apimachinery//pkg/util/wait:go_default_library",
        "@io_k8s_klog//:go_default_library",
    ],
)

go_binary(
    name = "workqueue",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
