load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["interface.go"],
    importpath = "k8s.io/client-go/informers/admissionregistration",
    visibility = ["//visibility:public"],
    deps = [
        "//informers/admissionregistration/v1:go_default_library",
        "//informers/admissionregistration/v1beta1:go_default_library",
        "//informers/internalinterfaces:go_default_library",
    ],
)
