load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["interface.go"],
    importpath = "k8s.io/client-go/informers/autoscaling",
    visibility = ["//visibility:public"],
    deps = [
        "//informers/autoscaling/v1:go_default_library",
        "//informers/autoscaling/v2beta1:go_default_library",
        "//informers/autoscaling/v2beta2:go_default_library",
        "//informers/internalinterfaces:go_default_library",
    ],
)
