load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["factory_interfaces.go"],
    importpath = "k8s.io/client-go/informers/internalinterfaces",
    visibility = ["//visibility:public"],
    deps = [
        "//kubernetes:go_default_library",
        "//tools/cache:go_default_library",
        "@io_k8s_apimachinery//pkg/apis/meta/v1:go_default_library",
        "@io_k8s_apimachinery//pkg/runtime:go_default_library",
    ],
)
